osprey_worker/src/osprey/engine/ast_validator/validators/tests/test_validate_dynamic_calls_have_annotated_rvalue/test_missing_annotation_and_argument.txt
error: 1 missing keyword argument(s)
--> main.sml:1:6
     |
   1 | Foo = JsonData()
     |       ^ the following keyword arguments were not provided: [`path`]
